# rust-web-programming

./: .env  Cargo.toml  tasks.json  todo.http
glue/: Cargo.toml
glue/src/: errors.rs  token.rs
ingress/: Cargo.toml  index.html  tasks.json
ingress/frontend/: package-lock.json  package.json  serve.json  tasks.json
ingress/frontend/public/: bundle.css  bundle.css.map  bundle.js  bundle.js.map  index.html
ingress/frontend/src/: App.css  index.tsx
ingress/frontend/src/api/: create.ts  get.ts  update.ts  url.ts  utils.ts
ingress/frontend/src/components/: CreateItemForm.tsx  ToDoItem.tsx
ingress/frontend/src/interfaces/: toDoItems.ts
ingress/scripts/: run_server.sh
ingress/src/: main.rs
migrations/: 20250929043533_initial-setup.sql
nanoservices/auth/core/: Cargo.toml
nanoservices/auth/dal/: Cargo.toml
nanoservices/auth/dal/src/: lib.rs  migrations.rs
nanoservices/auth/dal/src/connections/: mod.rs  sqlx_postgres.rs
nanoservices/auth/dal/src/users/: descriptors.rs  mod.rs  schema.rs
nanoservices/auth/dal/src/users/transactions/: create.rs  mod.rs
nanoservices/auth/networking/actix_server/: Cargo.toml
nanoservices/auth/networking/actix_server/src/: main.rs
nanoservices/auth/networking/actix_server/src/api/: mod.rs
nanoservices/auth/networking/actix_server/src/api/auth/: mod.rs
nanoservices/auth/networking/actix_server/src/api/users/: create.rs  mod.rs
nanoservices/to_do/core/: Cargo.toml
nanoservices/todo/dal/: Cargo.toml
nanoservices/todo/dal/src/: json_file.rs  lib.rs  migrations.rs
nanoservices/todo/dal/src/connections/: mod.rs
nanoservices/todo/dal/src/todo_items/: descriptors.rs  enums.rs  schema.rs
nanoservices/todo/dal/src/todo_items/transactions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
to_do/core/: Cargo.toml
to_do/core/src/: enums.rs  main.rs  (+1 more)
(+43 files in other folders)
